# langchain-bookbot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  run-code-quality-check.sh
docs/: changelog-cheatsheet.md  changelog-git-cliff-setup.md  code-quality-practices.md  pre-commit-guide.md  release-notes-process.md
langchain_bookbot/: app.py
